# tradeRS-bot

./: .env-example  .gitignore  Cargo.toml  readme.md
.github/workflows/: release.yml
devops/: Dockerfile.linux-ubuntu-base  docker-compose.yml  tradeRS_Bot_Controller.service  tradeRS_start.sh
src/: jupiter_strategy_start.rs  log_manager.rs  main.rs  market_risk_analyzer.rs  osmosis_strategy_start.rs  trading_math.rs  utils.rs
