[package]
name = "tradeRS-bot"
version = "0.1.0"
edition = "2024"

[dependencies]

# Common Deps
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.40"
dotenvy = "0.15"
base64 = "0.22.1"

# Cosmos Deps
cosmrs = "0.22.0"
osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust", branch = "main" }
bip39 = "2.1.0"
bip32 = { version = "0.5.3", features = ["secp256k1"] }
prost = "0.13.5"
prost-types = "0.13.5"


# Solana Deps
ed25519-dalek = "2.1.1"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
ed25519-dalek-bip32 = "0.3.0"
spl-associated-token-account = "6.0.0"
bincode = "1.3"
